--- a/dominio/pom.xml
+++ b/dominio/pom.xml
@@ -9,7 +9,7 @@
 
   <groupId>proyecto</groupId>
   <artifactId>dominio</artifactId>
-  <version>1.0-SNAPSHOT:</version>
+  <version>1.0-SNAPSHOT</version>
 
   <name>dominio</name>
   <!-- FIXME change it to the project's website -->
