--- a/nube/pom.xml
+++ b/nube/pom.xml
@@ -28,6 +28,16 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+	    <groupId>com.dropbox.core</groupId>
+	    <artifactId>dropbox-core-sdk</artifactId>
+	    <version>3.0.11</version>
+	</dependency>
+	<dependency>
+	    <groupId>proyecto</groupId>
+	    <artifactId>dominio</artifactId>
+	    <version>1.0-SNAPSHOT</version>
+	</dependency>
   </dependencies>
 
   <build>
