--- a/dominio/pom.xml
+++ b/dominio/pom.xml
@@ -28,6 +28,16 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+        <groupId>org.twitter4j</groupId>
+        <artifactId>twitter4j-core</artifactId>
+        <version>[4.0,)</version>
+    </dependency>
+    <dependency>
+	   <groupId>com.sachinhandiekar</groupId>
+	   <artifactId>jInstagram</artifactId>
+	   <version>1.2.2</version>
+	  </dependency>
   </dependencies>
 
   <build>
