--- a/web-app/pom.xml
+++ b/web-app/pom.xml
@@ -25,6 +25,11 @@
 	<artifactId>javax.servlet-api</artifactId>
 	<version>3.1.0</version>
 </dependency>
+	<dependency>
+	   <groupId>com.sachinhandiekar</groupId>
+	   <artifactId>jInstagram</artifactId>
+	   <version>1.2.2</version>
+	  </dependency>
   </dependencies>
   <build>
     <finalName>web-app</finalName>
