--- a/pom.xml
+++ b/pom.xml
@@ -42,21 +42,18 @@
           <configuration>
               <repoToken>m50zwUcNU53s4GKmiaUHY7RuhReK9EH27</repoToken>
           </configuration>
-        </plugin>
+        </plugin>        
         <plugin>
-		    <groupId>org.jacoco</groupId>
-		    <artifactId>jacoco-maven-plugin</artifactId>
-		    <version>0.7.6.201602180812</version>
-		    <executions>
-		        <execution>
-		            <id>prepare-agent</id>
-		            <goals>
-		                <goal>prepare-agent</goal>
-		            </goals>
-		        </execution>
-		    </executions>
-		</plugin>
-      
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>cobertura-maven-plugin</artifactId>
+          <version>2.7</version>
+          <configuration>
+              <format>xml</format>
+              <maxmem>256m</maxmem>
+              <!-- aggregated reports for multi-module projects -->
+              <aggregate>true</aggregate>
+          </configuration>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
