--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,4 @@ script:
   - mvn clean install
 
 after_success:
-  - cd dominio
-  - mvn clean cobertura:cobertura coveralls:report
+  - mvn clean test jacoco:report coveralls:report
