--- a/dominio/pom.xml
+++ b/dominio/pom.xml
@@ -38,6 +38,11 @@
 	   <artifactId>jInstagram</artifactId>
 	   <version>1.2.2</version>
 	  </dependency>
+	  <dependency>
+	    <groupId>com.googlecode.json-simple</groupId>
+	    <artifactId>json-simple</artifactId>
+	    <version>1.1.1</version>
+	  </dependency>
   </dependencies>
 
 </project>
