--- a/dominio/pom.xml
+++ b/dominio/pom.xml
@@ -43,6 +43,11 @@
 	    <artifactId>json-simple</artifactId>
 	    <version>1.1.1</version>
 	  </dependency>
+	  <dependency>
+  <groupId>com.flickr4java</groupId>
+  <artifactId>flickr4java</artifactId>
+  <version>3.0.1</version>
+</dependency>
   </dependencies>
 
 </project>
