--- a/dominio/src/main/resources/config.properties
+++ b/dominio/src/main/resources/config.properties
@@ -3,3 +3,4 @@ oauth.consumerKey=pC5e2TMGb34NHfcB6ewSe78VN
 oauth.consumerSecret=WHdlOlMKYwl6J2KgmJJbxg8BdhxigT0If6VKyYfvqUWA4rdl0Y
 oauth.accessToken=1086983048850296836-QjxMVxEo8spOtCB2ehKZIHAjYseIW1
 oauth.accessTokenSecret=BEx7kaPp0p4OA57mzQZumo208YZfqIGonzWASsUQ1iPFO
+PATH_FILE_USUARIOS=src/main/resources/usuarios.json
