--- a/dominio/src/test/resources/config.properties
+++ b/dominio/src/test/resources/config.properties
@@ -4,3 +4,8 @@ oauth.consumerSecret=WHdlOlMKYwl6J2KgmJJbxg8BdhxigT0If6VKyYfvqUWA4rdl0Y
 oauth.accessToken=1086983048850296836-QjxMVxEo8spOtCB2ehKZIHAjYseIW1
 oauth.accessTokenSecret=BEx7kaPp0p4OA57mzQZumo208YZfqIGonzWASsUQ1iPFO
 PATH_FILE_USUARIOS=src/test/resources/usuarios.json
+
+#Propiedades para la carga de la nube
+nubes=NubeEnum
+propiedadesExtra=NubePropiedades
+nubeSeleccionada=ConectorDrive
