--- a/vista/pom.xml
+++ b/vista/pom.xml
@@ -29,6 +29,11 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
+            <version>2.2.1</version>
+        </dependency>
+    <dependency>
 	    <groupId>proyecto</groupId>
 	    <artifactId>dominio</artifactId>
 	    <version>1.0-SNAPSHOT</version>
