--- a/dominio/src/test/resources/config.properties
+++ b/dominio/src/test/resources/config.properties
@@ -8,4 +8,7 @@ PATH_FILE_USUARIOS=src/test/resources/usuarios.json
 #Propiedades para la carga de la nube
 nubes=NubeEnum
 propiedadesExtra=NubePropiedades
-nubeSeleccionada=ConectorDrive
+nubeDrive=ConectorDrive
+nubeDropBox=ConectorDropBox
+nubeOneDrive=ConectorOneDrive
+nubeICloud=ConectorICloud
