--- a/nube/pom.xml
+++ b/nube/pom.xml
@@ -29,6 +29,16 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+		<groupId>com.google.code.gson</groupId>
+		<artifactId>gson</artifactId>
+		<version>2.8.5</version>
+	</dependency>
+	<dependency>   
+   <groupId>com.thoughtworks.xstream</groupId>   
+   <artifactId>xstream</artifactId>   
+   <version>1.4.5</version>   
+</dependency> 
+    <dependency>
       <groupId>com.google.apis</groupId>
       <artifactId>google-api-services-drive</artifactId>
       <version>v3-rev86-1.23.0</version>
