--- a/dominio/pom.xml
+++ b/dominio/pom.xml
@@ -28,7 +28,16 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-    
+    <dependency>
+		<groupId>com.google.code.gson</groupId>
+		<artifactId>gson</artifactId>
+		<version>2.8.5</version>
+	</dependency>
+	<dependency>   
+   <groupId>com.thoughtworks.xstream</groupId>   
+   <artifactId>xstream</artifactId>   
+   <version>1.4.5</version>   
+</dependency> 
     <dependency>
         <groupId>org.twitter4j</groupId>
         <artifactId>twitter4j-core</artifactId>
