--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
   <groupId>org.jacoco</groupId>
   <artifactId>jacoco-maven-plugin</artifactId>
   <version>0.8.3</version>
+  <configuration>
+  	<excludes>
+  		<exclude>**/dominio/target/classes/META-INF/services/*</exclude>
+  	</excludes>
+  </configuration>
   <executions>
         <execution>
             <goals>
